executeDelayedItemsLayout() on the nicknameListView after deleting the nick. This should ensure QTreeWidget internals do not keep deleted QTreeWidgetItem pointers around.

This commit should solve the bug #200123. If you ever experience it again
and/or the backtrace somewhat matches, please reopen the bug.

BUG:200123

svn path=/trunk/extragear/network/konversation/; revision=996715